# alfred-chrome

./: .gitignore  Alfred Chrome.alfredworkflow  CHANGELOG.md  Cargo.toml  Cartfile  Cartfile.resolved  Gopkg.toml  Magefile.go  Makefile  README.md  Rakefile  alfred-chrome.alfredworkflow  alfred-chrome.go  alfred-chrome.swift  open.rb  rustfmt.toml
.github/workflows/: deploy.yml
config/: README.md  workflow.json
src/: main.rs
src/alfred-chrome/: Package.swift  application
src/alfred-chrome/Sources/: main.swift
