[package]
name = "alfred-chrome"
version = "5.0.0"
edition = "2021"
description = "Opens a URL in Google Chrome, optionally in incognito and with specific profile."
homepage = "https://sw.cowtech.it/alfred-chrome"
repository = "https://github.com/ShogunPanda/alfred-chrome"
license = "ISC"
keywords = ["terminal"]
categories = ["command-line-utilities", "command-line-interface"]

[dependencies]
glob = "^0.3.0"
md-5 = "^0.10.5"
plist = "^1.3.1"
serde = { version = "^1.0.149", features = ["derive"] }
serde_json = { version = "^1.0.89" }

[profile.release]
opt-level = 3
lto = true
debug = 0
strip = "symbols"
codegen-units = 1
debug-assertions = false